--- a/page1.html
+++ b/page1.html
@@ -241,7 +241,7 @@
       <div class="obra-card">
         <div class="obra-imagen">
           <!-- Reemplaza este 'src' con tu imagen -->
-          <img src="https://lh3.googleusercontent.com/rd-gg-dl/ABS2GSnPxVvpwGrKbpzqFwysu5U7FQql1usypG1EdAQU8C8PIcb9QTk8D7zegYZ5PUXJTzwcaM2SgrHrH34R-VGGfpyfEPhY02b-1T9y7iOx5w6WCH3LoLDl4-wqUCI-3Ewe0n57mv9r3izyJYblLO-G9WaM7u6rVZpWzcKKcd7Mdj18mNZFsPZ_hQ7xSkOnmqjRvhlJVK24g0Mn13qKMkodpqdDxBTjyYjYD_6sz2F7IC1vL9JQZEl2BBvb13C_s1dK9Q5jUs5OjxJXaSGOpEkeaoZtR0WBwu7HPEM7yT6yUhMRkopdyEiN6PZcoo9ElItybQ3xWRF6ojb-iNordRqxcVmczcYtlgFs2Nee285x47Q4UeoAeBYfhYg6rDS9YetyHdJw8ymti1ciPmQ4B2-38n-7AFbDqmO_CWneqmzXZ9wIUeS8jtp4Aw5ALCYoStaKZF4nj2VOetkqBltmnApUHPe1Wb3-85ptGbjTRLgSHcrf3PNOd-suZi6rpLsg01ZbEbhni5yRkUxMdS8qqr_X-0aUsEkH0uypLWVFOPVr1DGtt20UugWBSs5l1TBkQ6x1AOHH0ZP8YJr8GM6J4onFd2QGNrpYevvGNO8EMN9_u5sTQKEBNV9G1PiGjZ1UCqUxwwIQOIf1GsOXVHewjVsVZWZFU7y4L6x6uo_ZQpXtgascoANEy79_h6849fvXzbh6PwOXyWOi8NogAxTOINRz-mzfClyUITDitoPHTrZePDHi8SLnaqP-BqrKeWM_WYnn2X0k0JlcErzzGW0XlRNTPAHeCy4PJLdIA7lBonp_JIXPfoOmlyvMMjw2QnGNPPlRMF7IPD-DvQCWotsTfggRt9wZORrf1LhQ9NqF-47MJX44eU8KJ5q8sMFoUnqp-EWZ7tOk3HW68furxMmortBZ63dMyrdc20f5ZvG5ItoNA10wZBXW77INQfkFufsXyGczz9BnMUC8mvOkqE2RMyatJQgxdvhzq048qc5id_PBlXBLU4exhbj69cTAnwhRw0Ze5KadbVZ1Y76fw-aMQCfisklzkwfgDGnKD_i60pZdtow1MujrcfgBLWwMoC9_Pnqggb5Ws_nhTWEzct5M9dhgmqSYwRRqXdNIYg4WyE6Xnymv6RhLaHvu_QLTPYqXxt8YASl41Hdyul5jGy3QhS2SPyA4S0hjcz8pGIhuvQSVe7hRfkqbjT02UrAOADZYg33HoG4xt8qOkCHW=s1024-rj?authuser=1" alt="Póster de Risas en el Piso 12">
+          <img src="assets/images/piso12.jpg" alt="Póster de Risas en el Piso 12">
         </div>
         <div class="obra-contenido">
           <h3 class="obra-titulo">Risas en el Piso 12</h3>
@@ -257,7 +257,7 @@
       <div class="obra-card">
         <div class="obra-imagen">
           <!-- Reemplaza este 'src' con tu imagen -->
-          <img src="https://lh3.googleusercontent.com/rd-gg-dl/ABS2GSmTIwyeunk1F4kfkq7Fq54P3EcfwbPjg8JrssBrSKFyLW-uqiFUa6viGpgrUYp6BGJ9vc1NleZSuVCvJyMhv5OKOmRh0GFTKzMhv8AHz-nx4LW4rdNJ1Xr1VmTKaLL6tvfnF8CPy7vvi6RApk4wUdE1jGHWvl_suY3Jm_aSUlEMd6tYyDDN54plAEDCw6KA4erEM9csdWmjanEYe0w4dluJeFVy6krg9o0_sUarMH9v3sHLC4TZFPeBRiHSLRfs2pr7IRBr50ENiTI2gUCzIAESDTiqUiiZSr0bLy4pBKnWaHbX1Rs6V1IXHsb9HqO0dvxXPXvkcVpg60NAOlVnCd1Vc9iLwdOoDlk27f_K8WV4vqPK8RsPNQ_XgxHyuNjFpeBs62QPB4oeIGa8o_QOnD7YSoyrUCbKXi9vBIn3PWsxP1wvTMDTdamjSrdxsfVDFQd1GwUN7vNiIFZ48hD0sy4s5o1raRNTOW881wq-F-OtPvcloql_T6dEMvJmkY-qUOwyu7TRes9bUCzU0bkCU7YwsctenUeGl7UnbxwE1F6yi88Pxq7QOiiVOAzyTt6n8eypAJVmwlaOqZ433vDTCdR4h8cdfBelDh-mnrmuA8IfBKkX8n2CIdftojjW0MSVuU8-HFckZhoUZ6HvnVuqOnsDJRl_Fk4loUer9ogvpULhM2t_dWjLRKD27ybH71OsrMELzsUkWxU49G3Jwjl6E_y-Z_NGd3GA8f464WOacNCP6M2G4_fLwx3QtVhKUBThGxhHVXG2tzXCXcRLMFVWA6WsWZ6sHW-yXExEgpw89dTkDHykvu8Swf6scrMbML5Rsb0RQKvWj2Xzgf4aKO4eJQb0ZQMpYMtI4l2MVT7AlEw7H7D9OBg9wYV1_njop0w_Ho21JjlpaYYmnjJTaCSWJ9HFdLywViCoscn7kl0mRzgRODSDEZN_pgwe7SFPZG-L2CsSsbX6xybKm-QCzqK7flGP3bsc3n33p-ZbL8R9JjCMe9p0yPVcjkPpmwAbyqqMTvtKGA_pYBiIVnqXRr9xodeIQN4yLyIXOoKAxUERHyLlcDp4OHqrqE5AGVIuEboy1PCjFqDgDAlTkYFu1dx2cRpkXeHSuFH7th3W-gLecN5eeoP-vecOH2Fiv4u6G75uCnMkX0GYSgPQ_VKyQ426lxinl55rWFSmesFm1WcmM690lWQXfFUqPuQTV_3eWFY6VrAIzAVa4Z8r=s1024-rj?authuser=1" alt="Póster de El Relojero de Cuerda">
+          <img src="assets/images/Gemini_Generated_Image_7z4ih37z4ih37z4i.png" alt="Póster de El Relojero de Cuerda">
         </div>
         <div class="obra-contenido">
           <h3 class="obra-titulo">El Relojero de Cuerda</h3>
@@ -305,7 +305,7 @@
       <div class="obra-card">
         <div class="obra-imagen">
           <!-- Reemplaza este 'src' con tu imagen -->
-          <img src="https://lh3.googleusercontent.com/rd-gg-dl/ABS2GSkyCCbhtWQIUepmtMSp8ZyobT31TJiRePDqwRiTKTHrR08MSL4yw6cCFltkxRSL1GGNCXQ9VQKYZ92crcfAWVyvMc9PmRcqdDniqEfx68F1S8u5H6sRn7t11MuNLZZYIhONFh7vU77EEZB0cZoV3Z-jBF2YfvkOf8XHsaI8to7BukfZpfBnL-u82jQxM2-IaC0mkFBhtGgMWvJzP6Vbu8nTbYYCbJbSeaT1vpi2BE7vpUzoG44F6PccSbbMQ_Z0YwKCJzim6UZd5_EP3k_QlM5I1qiLdRyI3mDHcpwa6r_jkEglmgZUj0EhgcX4KoWLgGGbClzJbWL2z1SzXVdwVDX_qFd_TkYApOxULbuVCNtr_G15yqWXs07iSloQ16pkr3Jj0IPeK__o9NI4pkrGef9rBMs4jaEePY4SAxct9BpLdSsLYPI-rUoxlTZZ7_LTcNYRfEEXlGMd2Mh7JVXOGqjdTcQoviq3ovNJX4781Aye_GDPNqd9FXVBql1PEyBKsWjSiKsldo4S6SvO4L_11Y_zREeGCEwKuqNVxiq8JoxrSoIgFvC66bQ5uM2KnowabekX1UJmmF2Tbxusi1VSc6Hn1fitaK_kd6ITUtI9XjqWiwFTOTWLHDoHQ-ShbDKGdbjlvI2g-EEtmBh4VULdoXsSBcgyyKJeVeQ4CdyWDyDHjk45pcZay_fmnaYdZV7g3ueiXOeD3N3NdvfNaqZ5mQPk5M6CZbpIOWzlbmab7hEP36_1EvblVxqiboAFBR0Nm-AUPa5LUc2NZHk0LiTpDn4GwD6AP5rVGvWEfFNRMcNmCJx_W31WmV-wPzcgtVQpBHFOp2oiVA9jwCGEbl_zd282yDDoj89ZUhrVWOchWAokX3wnqOIyCrYjeQNIh-YJ33VMpCk0Hq9LYKkBdODCjVLD6SZ-aJfiCFHx4cqfAmWqkCY95xhFwZ4oIPfLO8KsmrqjO1dhZCDiFE6vL6hCYYiAeuTvhuZptcbeZcXmRLGOprAYQUsat9_pUa9khSr41cYUsZzZbOcV3Bj4qPstmKVVWz4ItiW7zidSSTQoaUmBd8iBg9bS1OrKym8u3GEMHG04-kpM-nPAy1f5qbqktltBYAKrcCe2LDxmqVTDnXBKrK3Q9o3zU8Bm-Cfrqw4LoZ_qfDkdcL6xsGp3gEeCupOjHEZlb8g7Q1otPA0CbTNKXm4ZxWOUU5T6dx3yFaOHkmZZrWit8Ot8=s1024-rj?authuser=1" alt="Póster de Luces del Arrabal">
+          <img src="assets/images/Gemini_Generated_Image_us6z40us6z40us6z.png" alt="Póster de Luces del Arrabal">
         </div>
         <div class="obra-contenido">
           <h3 class="obra-titulo">Luces del Arrabal</h3>
